--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,7 +1,7 @@
 name: Rebase Upstream
 on:
-  schedule:
-    - cron: "0 0 * * *" # run daily
+  #schedule:
+  #  - cron: "0 0 * * *" # run daily
   workflow_dispatch: # run manually
 
 jobs:
